feat: add language json file

--- a/i18n/locales/en/translation.json
+++ b/i18n/locales/en/translation.json
@@ -1,3 +1,40 @@
 {
-  "title": "Hi there!"
+  "light-mode": "Light",
+  "dark-mode": "Dark",
+  "system-mode": "System",
+  "avatar-shape": "Avatar Shape",
+  "border-color": "Border Color",
+  "background-color": "Background Color",
+  "colors": "colors",
+  "face": "Face",
+  "tops": "Tops",
+  "ear": "Ear",
+  "earrings": "Earrings",
+  "eyebrows": "Eyebrows",
+  "eyes": "Eyes",
+  "nose": "Nose",
+  "glasses": "Glasses",
+  "mouth": "Mouth",
+  "beard": "Beard",
+  "clothes": "Clothes",
+  "circle": "Circle",
+  "square": "Square",
+  "squircle": "Squircle",
+  "revocation": "undo",
+  "reduction": "redo",
+  "flip": "flip",
+  "code": "code",
+  "randomize": "Randomize",
+  "download": "Download",
+  "generate-multiple": "Generate multiple",
+  "copy-code": "Copy",
+  "copied": "Copied",
+  "downloading": "Downloading",
+  "close": "Close",
+  "code-modal-title": "Code",
+  "downloadTip": "LONG PRESS or RIGHT CLICK to save",
+  "download-multiple": "Download All",
+  "downloadingMultiple": "Downloading",
+  "downloadMultipleTip": "Automatically generated",
+  "regenerate": "Regenerate"
 }
